Show payment history

--- a/karl-shop/src/app/components/user-login/user-profile/user-profile.component.css
+++ b/karl-shop/src/app/components/user-login/user-profile/user-profile.component.css
@@ -1,3 +1,7 @@
+html, body, .modal-login, .modal-wrapper{
+  width: 100%;
+  height: 100%;
+}
 .example-container {
   display: flex;
   flex-direction: column;
@@ -65,4 +69,89 @@ table {
 td,
 th {
   width: 25%;
+}
+.row.row-history {
+  padding: 0;
+  margin: 20px 0;
+}
+
+/* modal */
+.modal-login {
+  position: fixed;
+  width: 500px;
+  height: 180px;
+  top: 50%;
+  left: 50%;
+  margin-top: -90px;
+  margin-left: -250px;
+  z-index: 9999;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.4s;
+  transform: scale(0.5);
+}
+.modal-login.show {
+visibility: visible;
+opacity: 1;
+transition: 0.4;
+transform: scale(1);
+}
+.modal-wrapper {
+position: absolute;
+top: 0;
+left: 0;
+background: #918c8c5c;
+z-index: 9998;
+visibility: hidden;
+opacity: 0;
+}
+.modal-wrapper.show{
+visibility: visible;
+opacity: 1;
+}
+i.icon-trash {
+font-size: 16px;
+color: #fff;
+position: fixed;
+top: 5px;
+right: 5px;
+width: 30px;
+height: 20px;
+line-height: 20px;
+cursor: pointer;
+}
+.row.modal-row-footer {
+
+margin: 0;
+width: 50%;
+position: absolute;
+bottom: 0;
+left: 25%;
+
+}
+.row.modal-row-footer div {
+padding-bottom: 10px;
+color: #000;
+font-size: 14px;
+cursor: pointer;
+}
+.row.modal-row-footer div:hover {
+color: #ff084e;
+}
+.modal-content {
+  width: 500px;
+  height: 180px;
+  position: relative;
+  background: #f4f2f8;
+  border: 0;
+}
+/* modal */
+p.trade {
+  font-weight: 300;
+  font-size: 20px;
+  color: #ccc;
+  line-height: 460px;
+}
+.container.null {
+  height: 480px;
 }
