--- a/karl-shop/src/app/components/user-login/user-profile/user-profile.component.html
+++ b/karl-shop/src/app/components/user-login/user-profile/user-profile.component.html
@@ -42,8 +42,65 @@
 
 
   <mat-tab label="Lịch sử thanh toán">
-
-    <h1 style="color: red;">Lịch sử thanh toán của bạn đang trống</h1>
-
+    <div class="container null" *ngIf="_invoiceArray.length == 0">
+      <div class="row">
+        <div class="col-md-12 text-center">
+            <p class="trade">Không có lịch sử giao dịch</p>
+        </div>
+      </div>
+      
+    </div>
+    <div class="container" *ngIf="_invoiceArray.length > 0">
+      <div class="row row-history">
+        <div class="col-md-4 text-center">
+          <p>Ngày</p>
+        </div>
+        <div class="col-md-4 text-center">
+          <p>Tổng tiền</p>
+        </div>
+        <div class="col-md-4 text-center">
+          <p>Xem hóa dơn</p>
+        </div>
+      </div>
+      <div class="row row-history" *ngFor="let invoice of _invoiceArray">
+        <div class="col-md-4 text-center">
+          <p>{{invoice.ngay}}</p>
+        </div>
+        <div class="col-md-4 text-center">
+          <p>{{invoice.tongTien | number}}</p>
+        </div>
+        <div class="col-md-4 text-center">
+          <a class="btn btn-success" (click)="showInvoice(invoice.chiTietHoaDon)">Chi tiết</a>
+        </div>
+      </div>
+    </div>
   </mat-tab>
 </mat-tab-group>
+
+<div class="modal-wrapper"></div>
+
+<div class="modal-login">
+  <div class="modal-content">
+    <div class="row row-title">
+      <div class="col-sm-12 text-center col-title">
+        <span>Chi tiết hóa đơn</span>
+        <i class="fas fa-times icon-trash" (click)="removeModal()"></i>
+      </div>
+    </div>
+    <div class="row modal-row" *ngFor="let p of invoiceDetail">
+      <div class="col-sm-3 text-center">
+        <p>{{p.sanPham.tenSanPham}}</p>
+      </div>
+      <div class="col-sm-3 text-center">
+        <p>adidas nmd123</p>
+      </div>
+      <div class="col-sm-3 text-center">
+        <p>10</p>
+      </div>
+      <div class="col-sm-3 text-center">
+        <p>200.000</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Show login-modal after (click)="getAllProductInCart()" -->
