--- a/karl-shop/src/app/components/header/header.component.html
+++ b/karl-shop/src/app/components/header/header.component.html
@@ -180,7 +180,7 @@
                     <!-- <i class="fas fa-chevron-down"></i> -->
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" [routerLink]="['/home/account', userInfo.idAccount]">Thông tin tài khoản</a>
+                    <a class="dropdown-item" (click)="showProfile()">Thông tin tài khoản</a>
                     <a class="dropdown-item" (click)="signOut()">Đăng xuất</a>
                   </div>
                 </div>
