--- a/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
+++ b/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
@@ -9,7 +9,7 @@
           </div>
           <div class="card-body collapse show">
             <div class="card-block">
-              <button id="addRow" class="btn btn-primary mb-2">
+              <button id="addRow" class="btn btn-primary mb-2" routerLink ="/nhanvien/0">
                 <i class="ft-plus"></i>&nbsp; Thêm mới</button>
               <table id="table_nv" class="table table-responsive-md-md text-center">
                 <thead>
