--- a/ShoesAdmin/src/app/components/form-user/form-user.component.html
+++ b/ShoesAdmin/src/app/components/form-user/form-user.component.html
@@ -1,20 +1,19 @@
 <div class="content-wrapper">
     <!-- Basic form layout section start -->
     <section id="basic-form-layouts">
+
         <div class="row">
             <div class="col-sm-12">
                 <div class="content-header">Nhân Viên</div>
             </div>
         </div>
+
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
-                    <div class="card-header">
-                        <!-- <h4 class="card-title" id="bordered-layout-colored-controls">User Profile</h4> -->
-                    </div>
                     <div class="card-body">
                         <div class="px-3">
-                            <form class="form form-horizontal form-bordered">
+                            <form class="" method="post" [formGroup]="chitietNhanVien" (ngSubmit)="saveNhanvien()">
                                 <div class="form-body">
                                     <h4 class="form-section">
                                         <i class="ft-info"></i> Thông tin Nhân Viên</h4>
@@ -23,7 +22,8 @@
                                             <div class="form-group row">
                                                 <label class="col-md-3 label-control" for="userinput1">Mã Nhân Viên</label>
                                                 <div class="col-md-9">
-                                                    <input type="text" id="userinput1" class="form-control border-primary" placeholder="ID" name="ID" readonly value="{{chitiet_NV.id}}">
+                                                    <input formControlName="idNv" type="text" id="userinput1" class="form-control border-primary" placeholder="ID" name="ID"
+                                                        readonly value="{{chitiet_NV.id}}">
                                                 </div>
                                             </div>
                                         </div>
@@ -32,11 +32,13 @@
                                                 <label class="col-md-3 label-control" for="userinput2">Giới Tính</label>
                                                 <div class="col-md-9">
                                                     <div class="custom-control custom-radio display-inline-block ml-1">
-                                                        <input type="radio" id="customRadioInline2" [checked]="chitiet_NV.gioiTinh === 'NAM'" name="customRadioInline2" class="custom-control-input">
+                                                        <input type="radio" formControlName="gioiTinh" id="customRadioInline2" value="NAM" [checked]="chitiet_NV.gioiTinh === 'NAM'" name="gioiTinh" class="custom-control-input"
+                                                        >
                                                         <label class="custom-control-label" for="customRadioInline2">Nam</label>
                                                     </div>
                                                     <div class="custom-control custom-radio display-inline-block">
-                                                        <input type="radio" id="customRadioInline3" [checked]="chitiet_NV.gioiTinh === 'NỮ'" name="customRadioInline2" class="custom-control-input">
+                                                        <input type="radio" formControlName="gioiTinh" id="customRadioInline3" value="NỮ" [checked]="chitiet_NV.gioiTinh === 'NỮ'" name="gioiTinh" class="custom-control-input"
+                                                        >
                                                         <label class="custom-control-label" for="customRadioInline3">Nữ</label>
                                                     </div>
                                                 </div>
@@ -49,7 +51,8 @@
                                             <div class="form-group row last">
                                                 <label class="col-md-3 label-control" for="userinput3">Họ & Tên</label>
                                                 <div class="col-md-9">
-                                                    <input type="text" id="userinput3" class="form-control border-primary" placeholder="Username" name="username" value="{{chitiet_NV.tenNhanVien}}">
+                                                    <input formControlName="hoTen" type="text" id="userinput3" class="form-control border-primary" placeholder="Username" name="username"
+                                                        value="{{chitiet_NV.tenNhanVien}}">
                                                 </div>
                                             </div>
                                         </div>
@@ -57,7 +60,8 @@
                                             <div class="form-group row last">
                                                 <label class="col-md-3 label-control" for="userinput4">Ngày Sinh</label>
                                                 <div class="col-md-9">
-                                                    <input type="date" id="userinput4" class="form-control border-primary" placeholder="Nick Name" name="nickname" value="{{chitiet_NV.ngaySinh}}">
+                                                    <input formControlName="ngaySinh" type="date" id="userinput4" class="form-control border-primary" placeholder="Nick Name" name="nickname"
+                                                        value="{{chitiet_NV.ngaySinh}}">
                                                 </div>
                                             </div>
                                         </div>
@@ -71,21 +75,24 @@
                                             <div class="form-group row">
                                                 <label class="col-md-3 label-control" for="userinput5">Email</label>
                                                 <div class="col-md-9">
-                                                    <input class="form-control border-primary" type="email" placeholder="email" id="userinput5" value="{{chitiet_NV.email}}">
+                                                    <input formControlName="email" class="form-control border-primary" type="email" placeholder="email" id="userinput5" 
+                                                    value="{{chitiet_NV.email}}">
                                                 </div>
                                             </div>
 
                                             <div class="form-group row">
                                                 <label class="col-md-3 label-control" for="userinput6">Địa Chỉ</label>
                                                 <div class="col-md-9">
-                                                    <input class="form-control border-primary" type="url" placeholder="123/ABC" id="userinput6"value="{{chitiet_NV.diaChi}}">
+                                                    <input formControlName="diaChi" class="form-control border-primary" type="text" placeholder="123/ABC" id="userinput6" 
+                                                    value="{{chitiet_NV.diaChi}}">
                                                 </div>
                                             </div>
 
                                             <div class="form-group row last">
                                                 <label class="col-md-3 label-control">Số Điện Thoại</label>
                                                 <div class="col-md-9">
-                                                    <input class="form-control border-primary" type="tel" placeholder="0123456789" id="userinput7" value="{{chitiet_NV.soDienThoai}}">
+                                                    <input formControlName="soDienThoai" class="form-control border-primary" type="tel" placeholder="0123456789" id="userinput7"
+                                                        value="{{chitiet_NV.soDienThoai}}">
                                                 </div>
                                             </div>
                                         </div>
@@ -96,7 +103,7 @@
                                     <button type="button" class="btn btn-raised btn-warning mr-1" routerLink="/nhanvien">
                                         <i class="ft-corner-up-left"></i> Quay lại
                                     </button>
-                                    <button type="button" class="btn btn-raised btn-primary">
+                                    <button type="submit" class="btn btn-raised btn-primary">
                                         <i class="fa fa-check-square-o"></i> Lưu
                                     </button>
                                 </div>
@@ -104,8 +111,15 @@
 
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- <div>
+    <select *ngFor="let giay of ListGiay">
+        <option value="{{giay.id === chitietsp.loaiGiay.tenLoai ? 'selected' : ''}}">{{giay.tenLoai}}</option>
+    </select>
+    </div> -->
 </div>
