--- a/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
@@ -1,67 +1,63 @@
 <div class="content-wrapper">
   <!--Extended Table starts-->
-  <div class="row">
-      <div class="col-12">
-          <div class="content-header">THÔNG TIN SẢN PHẨM</div>
-      </div>
+  <div class="row row-title">
+    <div class="col-12">
+      <div class="content-header">THÔNG TIN SẢN PHẨM</div>
+    </div>
   </div>
   <section id="extended">
-      <div class="row">
-          <div class="col-sm-12">
-              <div class="card">
-                  <div class="card-header">
-                      <h4 class="card-title">SẢN PHẨM</h4>
-                  </div>
-                  <div class="card-body">
-                      <div class="card-block">
-                            <div class="mb-3"> 
-                            <a  class="btn btn-raised gradient-pomegranate white"[routerLink]= "['/chitiet-sp']">
-                                        Thêm sản phẩm mới
-                                    </a> 
-                                </div>
-                          <table id="table_sp" class="table table-responsive-md-md text-center">
-                              <thead>
-                                  <tr>
-                                      <th>Mã Sản Phẩm</th>
-                                      <th>Tên Sản Phẩm</th>
-                                      <th>Loại Giày</th>
-                                      <th>Hình ảnh</th>
-                                      <th>Kích thước</th>
-                                      <th>Chức năng</th>
-                                  </tr>
-                              </thead>
-                              <tbody>
-                                  <tr *ngFor= "let sp of list_sp" >
-                                      <td>{{sp.id}}</td>
-                                      <td style="vertical-align: middle">{{sp.tenSanPham}}</td>
-                                      <td style="vertical-align: middle">{{sp.loaiGiay.tenLoai}}</td>
-                                      <td style="vertical-align: middle"><img src="{{sp.hinhSanPham[0].hinh}}" width="100"></td>
-                                      <td style="vertical-align: middle">
-                                          <span *ngFor="let size of sp.hangTrongKho">
-                                              {{size.kichThuoc.tenKichThuoc}}
-                                              <span>  </span></span>
-                                          </td>
-                                      <td style="vertical-align: middle" routerLinkActive="active">
-                                          <a class="info p-0" data-original-title="" title="Chi tiết" 
-                                        routerLink="/sanpham/{{sp.id}}">
-                                              <i class="ft-list font-medium-3 mr-2"></i>
-                                          </a>
-                                          <a class="success p-0" data-original-title="" title="Cập nhật" (click)="navigate('edit_sp')">
-                                              <i class="ft-edit-2 font-medium-3 mr-2"></i>
-                                          </a>
-                                          <a class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
-                                              <i class="ft-x font-medium-3 mr-2"></i>
-                                          </a>
-                                          <!-- <button type="button" class="btn btn-primary btn-raised btn-block" id="confirm-cancel" >Buttons Actions</button> -->
-                                      </td>
-                                  </tr>
-                              </tbody>
-                          </table>
-                      </div>
-                  </div>
-              </div>
-          </div>
+    <div class="container content-table">
+      <div class="row form-product">
+
+        <div class="col-md-12 text-left">
+          <a class="btn btn-raised gradient-pomegranate white" [routerLink]="['/chitiet-sp']">
+            Thêm sản phẩm mới
+          </a>
+        </div>
+
+        <table id="table_sp" class="table table-responsive-md-md text-center">
+          <thead>
+            <tr>
+              <th>Mã Sản Phẩm</th>
+              <th>Tên Sản Phẩm</th>
+              <th>Loại Giày</th>
+              <th>Hình ảnh</th>
+              <th>Kích thước</th>
+              <th>Chức năng</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let sp of list_sp">
+              <td>{{sp.id}}</td>
+              <td style="vertical-align: middle">{{sp.tenSanPham}}</td>
+              <td style="vertical-align: middle">{{sp.loaiGiay.tenLoai}}</td>
+              <td style="vertical-align: middle">
+                <img src="{{sp.hinhSanPham[0].hinh}}" width="100">
+              </td>
+              <td style="vertical-align: middle">
+                <span *ngFor="let size of sp.hangTrongKho">
+                  {{size.kichThuoc.tenKichThuoc}}
+                  <span> </span>
+                </span>
+              </td>
+              <td style="vertical-align: middle" routerLinkActive="active">
+                <a class="info p-0" data-original-title="" title="Chi tiết" routerLink="/sanpham/{{sp.id}}">
+                  <i class="ft-list font-medium-3 mr-2"></i>
+                </a>
+                <a class="success p-0" data-original-title="" title="Cập nhật" (click)="navigate('edit_sp')">
+                  <i class="ft-edit-2 font-medium-3 mr-2"></i>
+                </a>
+                <a class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
+                  <i class="ft-x font-medium-3 mr-2"></i>
+                </a>
+                <!-- <button type="button" class="btn btn-primary btn-raised btn-block" id="confirm-cancel" >Buttons Actions</button> -->
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
       </div>
+    </div>
   </section>
   <!--Extended Table Ends-->
   <!--Shopping cart starts-->
