--- a/karl-shop/src/app/components/header/header.component.html
+++ b/karl-shop/src/app/components/header/header.component.html
@@ -20,7 +20,11 @@
         <li class="home-menu" (click)="getProductByCate(loai.tenLoai)" *ngFor="let loai of _loaigiayArray">
           <span class="icons">
             <i class="fa fa-chevron-right"></i>
-          </span> {{loai.tenLoai}}</li>
+          </span> {{loai.tenLoai}}
+        </li>
+        <!-- <li>
+          <a class="btn btn-primary btn-demo">Upload</a>
+        </li> -->
       </ul>
     </div>
   </div>
