--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
@@ -17,7 +17,7 @@
         <div class="card">
           <div class="card-body">
             <div class="px-3">
-              <form class="form">
+              <form class="form" *ngIf="chitietSp != null">
                 <div class="form-body">
                   <h4 class="form-section">
                     <i class="ft-user"></i> Mã sản phẩm: {{ chitietSp.id }}</h4>
@@ -81,7 +81,7 @@
                     <div class="col-md-12">
                       <div class="form-actions text-center">
                         <button type="button" class="btn btn-raised btn-raised btn-warning" routerLink="/sanpham">
-                          <i class="ft-corner-up-left" ></i> Quay lại
+                          <i class="ft-corner-up-left"></i> Quay lại
                         </button>
                         <button type="button" class="btn btn-raised btn-raised btn-primary">
                           <i class="fa fa-check-square-o"></i> Lưu
@@ -105,19 +105,36 @@
           <div class="card-body">
             <div class="px-3">
 
-              <form class="form">
+              <form class="form" *ngIf="chitietSp != null">
                 <div class="form-body">
                   <h4 class="form-section">
                     <i class="ft-info"></i> Hình ảnh</h4>
-                  <div class="row">
-                    <label class="col-md-4 label-control">Chọn ảnh:</label>
-                    <div class="col-md-8">
-                      <label id="projectinput8" class="file center-block">
-                        <input type="file" id="file">
-                        <span class="file-custom"></span>
+
+                  <div class="row upload">
+
+                    <div class="col-md-10">
+                      <div *ngIf="currentFileUpload" class="progress" [ngClass]="progress.percentage != 100 ? 'show' : 'hide' ">
+                        <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" attr.aria-valuenow="{{progress.percentage}}"
+                          aria-valuemin="0" aria-valuemax="100" [ngStyle]="{width:progress.percentage+'%'}">
+                          {{progress.percentage}}%</div>
+                      </div>
+                      <label class="btn btn-default">
+                        <input type="file" (change)="selectFile($event)">
                       </label>
                     </div>
+
+                    <div class="col-md-2">
+                      <button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">Upload</button>
+                    </div>
+
                   </div>
+
+                  <div class="row list-upload">
+                    <div class="col-md-12 review">
+                      <!-- <img src="{{listFile[0].name}}"> -->
+                    </div>
+                  </div>
+
                 </div>
                 <table id="table_sp" class="table table-responsive-md-md text-center">
                   <thead>
@@ -130,7 +147,9 @@
                   <tbody>
                     <tr *ngFor="let image of chitietSp.hinhSanPham">
                       <td style="vertical-align: middle">{{ image.id }}</td>
-                      <td style="vertical-align: middle"><img src="{{image.hinh}}" width="100"></td>
+                      <td style="vertical-align: middle">
+                        <img src="{{image.hinh}}" width="100">
+                      </td>
                       <td style="vertical-align: middle">
                         <a class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
                           <i (click)="delSize(size.kichThuocId)" class="ft-x font-medium-3 mr-2"></i>
