--- a/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
@@ -1,208 +1,63 @@
 <div class="content-wrapper">
-  <!--Extended Table starts-->
-  <div class="row row-title">
-    <div class="col-12">
-      <div class="content-header">THÔNG TIN SẢN PHẨM</div>
-    </div>
-  </div>
-  <section id="extended">
-    <div class="container content-table">
-      <div class="row form-product">
-
-        <div class="col-md-12 text-left">
-          <a class="btn btn-raised gradient-pomegranate white" [routerLink]="['/chitiet-sp']">
-            Thêm sản phẩm mới
-          </a>
+    <!--Extended Table starts-->
+    <div class="row">
+        <div class="col-12">
+            <div class="content-header">THÔNG TIN SẢN PHẨM</div>
         </div>
-
-        <table id="table_sp" class="table table-responsive-md-md text-center">
-          <thead>
-            <tr>
-              <th>Mã Sản Phẩm</th>
-              <th>Tên Sản Phẩm</th>
-              <th>Loại Giày</th>
-              <th>Hình ảnh</th>
-              <th>Kích thước</th>
-              <th>Chức năng</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let sp of list_sp">
-              <td>{{sp.id}}</td>
-              <td style="vertical-align: middle">{{sp.tenSanPham}}</td>
-              <td style="vertical-align: middle">{{sp.loaiGiay.tenLoai}}</td>
-              <td style="vertical-align: middle">
-                <img src="{{sp.hinhSanPham[0].hinh}}" width="100">
-              </td>
-              <td style="vertical-align: middle">
-                <span *ngFor="let size of sp.hangTrongKho">
-                  {{size.kichThuoc.tenKichThuoc}}
-                  <span> </span>
-                </span>
-              </td>
-              <td style="vertical-align: middle" routerLinkActive="active">
-                <a class="info p-0" data-original-title="" title="Chi tiết" routerLink="/sanpham/{{sp.id}}">
-                  <i class="ft-list font-medium-3 mr-2"></i>
-                </a>
-                <a class="success p-0" data-original-title="" title="Cập nhật" (click)="navigate('edit_sp')">
-                  <i class="ft-edit-2 font-medium-3 mr-2"></i>
-                </a>
-                <a class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
-                  <i class="ft-x font-medium-3 mr-2"></i>
-                </a>
-                <!-- <button type="button" class="btn btn-primary btn-raised btn-block" id="confirm-cancel" >Buttons Actions</button> -->
-              </td>
-            </tr>
-          </tbody>
-        </table>
-
-      </div>
     </div>
-  </section>
-  <!--Extended Table Ends-->
-  <!--Shopping cart starts-->
-  <!-- <section id="shopping-cart">
-      <div class="row">
-          <div class="col-sm-12">
-              <div class="card">
-                  <div class="card-header">
-                      <h4 class="card-title">Shopping Cart</h4>
-                  </div>
-                  <div class="card-body">
-                      <div class="card-block">
-                          <table class="table table-responsive-md text-center">
-                              <thead>
-                                  <tr>
-                                      <th>Image</th>
-                                      <th>Product</th>
-                                      <th>Size</th>
-                                      <th>Price</th>
-                                      <th>Quantity</th>
-                                      <th>Amount</th>
-                                      <th>Delete</th>
-                                  </tr>
-                              </thead>
-                              <tbody>
-                                  <tr *ngFor= "let sp of list_sp">
-                                      <td>
-                                          <img class="media-object round-media" src="../assets/app-assets/img/elements/01.png" alt="Generic placeholder image" style="height: 75px;"
-                                          />
-                                      </td>
-                                      <td>{{sp.tenSanPham}}</td>
-                                      <td>{{sp.kichThuoc.tenKichThuoc}}</td>
-                                      <td>{{sp.hangTrongKho.dongia}}</td>
-                                      <td>
-                                          2
-                                          <div class="btn-group ml-1">
-                                              <a class="btn btn-info btn-raised font-medium-5" href="javascript:void(0)">-</a>
-                                              <a class="btn btn-info btn-raised font-medium-5" href="javascript:void(0)">+</a>
-                                          </div>
-                                      </td>
-                                      <td>$19.94</td>
-                                      <td>
-                                          <a class="danger" data-original-title="" title="">
-                                              <i class="ft-trash font-medium-3"></i>
-                                          </a>
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          <img class="media-object round-media" src="../assets/app-assets/img/elements/07.png" alt="Generic placeholder image" style="height: 75px;"
-                                          />
-                                      </td>
-                                      <td>Product 2</td>
-                                      <td>15.9 Ounce</td>
-                                      <td>$6.00</td>
-                                      <td>
-                                          2
-                                          <div class="btn-group ml-1">
-                                              <a class="btn btn-info btn-raised font-medium-5" href="javascript:void(0)">-</a>
-                                              <a class="btn btn-info btn-raised font-medium-5" href="javascript:void(0)">+</a>
-                                          </div>
-                                      </td>
-                                      <td>$12.00</td>
-                                      <td>
-                                          <a class="danger" data-original-title="" title="">
-                                              <i class="ft-trash font-medium-3"></i>
-                                          </a>
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          <img class="media-object round-media" src="../assets/app-assets/img/elements/11.png" alt="Generic placeholder image" style="height: 75px;"
-                                          />
-                                      </td>
-                                      <td>Product 3</td>
-                                      <td>20.9 Ounce</td>
-                                      <td>$15.78</td>
-                                      <td>
-                                          1
-                                          <div class="btn-group ml-1">
-                                              <a class="btn btn-info btn-raised font-medium-5" href="javascript:void(0)">-</a>
-                                              <a class="btn btn-info btn-raised font-medium-5" href="javascript:void(0)">+</a>
-                                          </div>
-                                      </td>
-                                      <td>$15.78</td>
-                                      <td>
-                                          <a class="danger" data-original-title="" title="">
-                                              <i class="ft-trash font-medium-3"></i>
-                                          </a>
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          <img class="media-object round-media" src="../assets/app-assets/img/elements/14.png" alt="Generic placeholder image" style="height: 75px;"
-                                          />
-                                      </td>
-                                      <td>Product 4</td>
-                                      <td>90 Ounce</td>
-                                      <td>$24.51</td>
-                                      <td>
-                                          3
-                                          <div class="btn-group ml-1">
-                                              <a class="btn btn-info btn-raised font-medium-5" href="javascript:void(0)">-</a>
-                                              <a class="btn btn-info btn-raised font-medium-5" href="javascript:void(0)">+</a>
-                                          </div>
-                                      </td>
-                                      <td>$73.53</td>
-                                      <td>
-                                          <a class="danger" data-original-title="" title="">
-                                              <i class="ft-trash font-medium-3"></i>
-                                          </a>
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td></td>
-                                      <td></td>
-                                      <td></td>
-                                      <td></td>
-
-                                      <td>
-                                          <b>Total</b>
-                                      </td>
-                                      <td>
-                                          <b>$101.31</b>
-                                      </td>
-                                      <td></td>
-                                  </tr>
-                                  <tr>
-                                      <td></td>
-                                      <td></td>
-                                      <td></td>
-                                      <td></td>
-                                      <td></td>
-                                      <td></td>
-                                      <td>
-                                          <button class="btn btn-success btn-raised">Thêm mới</button>
-                                      </td>
-                                  </tr>
-                              </tbody>
-                          </table>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section> -->
-  <!--Shopping cart ends-->
-</div>
+    <section id="extended">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="card-block">
+                              <!-- <div class="mb-3"> 
+                              <a  class="btn btn-raised gradient-pomegranate white"[routerLink]= "['/chitiet-sp']">
+                                          Thêm sản phẩm 
+                                      </a> 
+                                  </div> -->
+                            <table id="table_sp" class="table table-responsive-md-md text-center">
+                                <thead>
+                                    <tr>
+                                        <th>Mã Sản Phẩm</th>
+                                        <th>Tên Sản Phẩm</th>
+                                        <th>Loại Giày</th>
+                                        <th>Hình ảnh</th>
+                                        <th>Kích thước</th>
+                                        <th>Chức năng</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor= "let sp of list_sp" >
+                                        <td>{{sp.id}}</td>
+                                        <td style="vertical-align: middle">{{sp.tenSanPham}}</td>
+                                        <td style="vertical-align: middle">{{sp.loaiGiay.tenLoai}}</td>
+                                        <td style="vertical-align: middle"><img src="{{sp.hinhSanPham[0].hinh}}" width="100"></td>
+                                        <td style="vertical-align: middle">
+                                            <span *ngFor="let size of sp.hangTrongKho">
+                                                {{size.kichThuoc.tenKichThuoc}}
+                                                <span>  </span></span>
+                                            </td>
+                                        <td style="vertical-align: middle" routerLinkActive="active">
+                                            <a class="info p-0" data-original-title="" title="Chi tiết" 
+                                          routerLink="/sanpham/{{sp.id}}">
+                                                <i class="ft-list font-medium-3 mr-2"></i>
+                                            </a>
+                                            <a class="info p-0" data-original-title="" title="Thêm mới" [routerLink]= "['/chitiet-sp']">
+                                                <i class="ft-plus-square"></i>
+                                            </a>
+                                            <a class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
+                                                <i class="ft-x font-medium-3 mr-2"></i>
+                                            </a>
+                                            <!-- <button type="button" class="btn btn-primary btn-raised btn-block" id="confirm-cancel" >Buttons Actions</button> -->
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+  </div>
